# Nmap Changelog ($Id$); -*-text-*-

o It's now possible to mix IPv4 range notation with CIDR netmasks in
  target specifications. For example, 192.168-170.4-100,200.5/16 is
  effectively the same as 192.168.168-170.0-255.0-255. [David Fifield]

o Added nmap-fo.xsl, contributed by Tilik Ammon. This converts Nmap
  XML into XSL-FO, which can be converted into PDF using Apache FOP.

o Increased the number of slack file descriptors not used during connect
  scan. Previously, the calculation did not consider the descriptors
  used by various open log files. Connect scans using a lot of sockets
  could fail with the message "Socket creation in sendConnectScanProbe:
  Too many open files". [David Fifield]

o [Zenmap] Fixed internationalization files. Running in a language
  other than the default English would result in the error
  "ValueError: too many values to unpack". [David Fifield]

o Changed the --webxml XSL stylesheet to point to the new location of
  nmap.xsl in the new respository,
    https://svn.nmap.org/nmap/docs/nmap.xsl
  This was noticed by Simon John.

o [NSE] Made the vulnerability library able to preserve vulnerability
  information across multiple ports of the same host. The bug was
  reported by iphelix. [Djalal Harouni]

o [NSE] Added ventrilo-info by Marin Maržić. This gets information
  from a Ventrilo VoIP server.

o Removed the undocumented -q option, which renamed the nmap process
  to something like "pine".

o Moved the Japanese man page from man1/jp to man1/ja. jp is a country
  code while ja is a language code. Reported by Christian Neukirchen.

o [NSE] Added mysql-enum script which enumerates valid mysql server
  usernames [Aleksandar Nikolic]

o [Nsock] Reworked the logging infrastructure to make it more flexible
  and consistent. Updated nmap, nping and ncat accordingly. Nsock log level
  can now be adjusted at runtime by pressing d/D in nmap.
  [Henri Doreau, David Fifield]
